Rebase main and add all seismic
Signed-off-by: Liyun Xiu <xiliyun@amazon.com>